--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-jscs": "^2.5.0"
+  },
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
