--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node ./bin/www"
   },
   "devDependencies": {
+    "browserify": "^12.0.1",
     "grunt": "~0.4.5",
+    "grunt-browserify": "^4.0.1",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^0.6.1",
@@ -19,6 +21,7 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "underscore": "^1.8.3"
   }
 }
