--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "browserify": "^12.0.1",
     "grunt": "~0.4.5",
     "grunt-browserify": "^4.0.1",
+    "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^0.6.1",
@@ -16,10 +17,14 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "bootstrap": "^3.3.6",
     "cookie-parser": "~1.3.5",
+    "d3": "^3.5.11",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "jquery-browserify": "^1.8.1",
+    "moment": "^2.10.6",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "underscore": "^1.8.3"
