--- a/public/stylesheets/.gitignore
+++ b/public/stylesheets/.gitignore
@@ -1,2 +1,2 @@
-# Keep this directory but ignore everything inside (once SASS is implemented)
-# [^.]*
+# Keep this directory but ignore everything inside
+[^.]*
