--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "build": "grunt",
     "start": "node ./bin/www"
   },
   "devDependencies": {
     "browserify": "^12.0.1",
     "grunt": "~0.4.5",
     "grunt-browserify": "^4.0.1",
+    "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-uglify": "~0.5.0",
