--- a/package.json
+++ b/package.json
@@ -1,34 +1,43 @@
 {
   "name": "node_express_ejs",
-  "version": "0.0.0",
+  "description" : "An Node.js exploration project",
+  "homepage" : "https://node-express-ejs.herokuapp.com/",
+  "author" : "Colin Cummings <colinrcummings@gmail.com>",
+  "repository" : {"type": "git", "url": "git:github.com/colinrcummings/node_express_ejs.git"},
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build": "grunt",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "postinstall": "bash ./post_install.sh"
   },
   "devDependencies": {
-    "browserify": "^12.0.1",
-    "grunt": "~0.4.5",
-    "grunt-browserify": "^4.0.1",
-    "grunt-contrib-clean": "^0.7.0",
-    "grunt-contrib-copy": "^0.8.2",
+    "grunt-jscs": "^2.5.0",
     "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-jscs": "^2.5.0"
+    "grunt-contrib-watch": "^0.6.1"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
     "bootstrap": "^3.3.6",
+    "browserify": "^12.0.1",
     "cookie-parser": "~1.3.5",
     "d3": "^3.5.11",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "grunt": "~0.4.5",
+    "grunt-browserify": "^4.0.1",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-uglify": "~0.5.0",
     "jquery-browserify": "^1.8.1",
     "moment": "^2.10.6",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "underscore": "^1.8.3"
+  },
+  "engines": {
+    "node": "0.12.7",
+    "npm": "2.11.3"
   }
 }
