--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "node_express_ejs",
-  "description" : "An Node.js exploration project",
-  "homepage" : "https://node-express-ejs.herokuapp.com/",
-  "author" : "Colin Cummings <colinrcummings@gmail.com>",
-  "repository" : {"type": "git", "url": "git:github.com/colinrcummings/node_express_ejs.git"},
+  "description": "An Node.js exploration project",
+  "homepage": "https://node-express-ejs.herokuapp.com/",
+  "author": "Colin Cummings <colinrcummings@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git:github.com/colinrcummings/node_express_ejs.git"
+  },
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,9 +14,10 @@
     "postinstall": "bash ./post_install.sh"
   },
   "devDependencies": {
-    "grunt-jscs": "^2.5.0",
+    "grunt-alert": "^0.3.2",
     "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-jscs": "^2.5.0"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -24,10 +28,12 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "font-awesome": "^4.5.0",
     "grunt": "~0.4.5",
     "grunt-browserify": "^4.0.1",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-uglify": "~0.5.0",
     "jquery-browserify": "^1.8.1",
