--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "postinstall": "bash ./post_install.sh"
   },
   "devDependencies": {
-    "grunt-alert": "^0.3.2",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-jscs": "^2.5.0"
+    "grunt-express-server": "^0.5.1",
+    "grunt-jscs": "^2.5.0",
+    "grunt-parallel": "^0.4.1",
+    "grunt-preprocess": "^5.0.1"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -36,6 +38,7 @@
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-uglify": "~0.5.0",
+    "grunt-env": "^0.4.4",
     "jquery-browserify": "^1.8.1",
     "moment": "^2.10.6",
     "morgan": "~1.6.1",
