--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-express-server": "^0.5.1",
     "grunt-jscs": "^2.5.0",
+    "grunt-open": "^0.2.3",
     "grunt-parallel": "^0.4.1"
   },
   "dependencies": {
