--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "node_express_ejs",
-  "description": "An Node.js exploration project",
+  "description": "A didactic exploration of Node.js",
   "homepage": "https://node-express-ejs.herokuapp.com/",
   "author": "Colin Cummings <colinrcummings@gmail.com>",
   "repository": {
     "type": "git",
     "url": "git:github.com/colinrcummings/node_express_ejs.git"
   },
-  "version": "0.0.2",
+  "version": "0.0.3",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -37,6 +37,7 @@
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-env": "^0.4.4",
     "grunt-preprocess": "^5.0.1",
