--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "postinstall": "bash ./post_install.sh"
+    "postinstall": "bash ./heroku/post_install.sh"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.10.0",
